recipes on. Next: List Recipes

--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,6 +1,3 @@
 <template name="home">
-  <h1>HOME</h1>
-  <a href="{{pathFor '/Ingredients'}}">Ingredients</a>
-  <a href="{{pathFor '/Recipes'}}">Recipes</a>
-  <a href="{{pathFor '/Lists'}}">Lists</a>
+  <h1>home</h1>
 </template>
