--- a/client/templates/lists/lists.html
+++ b/client/templates/lists/lists.html
@@ -1,20 +1,13 @@
 <template name="lists">
-   <h1>Lists</h1>
-   <input id="name" type="text" placeholder="Add...">
-   <div class="add-list">Add</div>
-   {{#each lists}}
-       <div class="item">
-           <!-- <img class="ui avatar image" src="/img/dog.jpg"> -->
-           <div class="content">
-               <a id="list-name">{{name}}</a>
-               {{#each listIngredients}}
-                  {{listIngredient}}
-               {{/each}}
-               <div id={{_id}} class="remove-list">Rem</div>
-           </div>
-       </div>
-     {{else}}
-         No Lists
-   {{/each}}
-   <a href="{{pathFor '/Ingredients'}}">Ingredients</a>
+    <h1>Lists</h1>
+    {{ > input addAction="add-list"}}
+    {{#each lists}}
+    <div class="item">
+        <div class="content">
+            <a id="list-name">{{name}}</a> {{#each listIngredients}} {{listIngredient}} {{/each}}
+            <div id="{{_id}}" class="remove-list">Rem</div> |
+            <div id="{{_id}}" class="set-current-list">Choose</div>
+        </div>
+    </div>
+    <br /> {{else}} No Lists {{/each}}
 </template>
