User integration. Fix mongodb queries

--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -9,9 +9,9 @@
       <h3>{{username}}</h3>
     {{/each}}
     <div id="logout">logout</div>
-    <a href="{{pathFor '/Ingredients'}}">Ingredients</a>
-    <a href="{{pathFor '/Recipes'}}">Recipes</a>
-    <a href="{{pathFor '/Lists'}}">Lists</a>
+    <a href="{{pathFor '/ingredients'}}">Ingredients</a>
+    <a href="{{pathFor '/recipes'}}">Recipes</a>
+    <a href="{{pathFor '/lists'}}">Lists</a>
     {{> Template.dynamic template=header}}
     {{> Template.dynamic template=main}}
     {{> Template.dynamic template=footer}}
