--- a/client/templates/users/login.html
+++ b/client/templates/users/login.html
@@ -3,4 +3,5 @@
   <input type="email" id="login-email" />
   <input type="password" id="login-password" />
   <a href="#" id="signin">signin</a>
+  <a href="{{pathFor '/signup'}}">signup</a>
 </template>
